<resources>
    <string name="app_name">WeatherApp</string>
    <string name="ankara">Ankara</string>
    <string name="_14">14°</string>
    <string name="ya_murlu_n10_00">Yağmurlu\n10:00</string>
    <string name="_18">18°</string>
    <string name="_10">10°</string>
    <string name="icon">icon</string>
    <string name="background">background</string>

    <string-array name="weather_array">
        <item>12°</item>
        <item>14°</item>
        <item>13°</item>
        <item>15°</item>
        <item>13°</item>
        <item>12°</item>
        <item>11°</item>
        <item>12°</item>
        <item>13°</item>
        <item>15°</item>
        <item>11°</item>
        <item>12°</item>
        <item>9°</item>
    </string-array>

    <string-array name="clock_array">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>
</resources>