<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_menu_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ankara"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:contentDescription="@string/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_location_on_24" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/transparent50"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".5"
            android:scaleType="centerCrop"
            android:src="@drawable/background"

            android:tintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/transparent100" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:shadowColor="@color/black"
                android:text="@string/_14"
                android:textColor="@color/white"
                android:textSize="110sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:contentDescription="@string/icon"
                android:id="@+id/iv_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/rain"
                app:layout_constraintStart_toEndOf="@+id/tv_degree"
                app:layout_constraintTop_toTopOf="@+id/tv_degree" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ya_murlu_n10_00"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_degree"
                app:layout_constraintTop_toBottomOf="@+id/tv_degree" />

            <ImageView
                android:contentDescription="@string/icon"
                android:id="@+id/iv_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_keyboard_arrow_up_24"
                app:layout_constraintEnd_toEndOf="@+id/iv_icon"
                app:layout_constraintStart_toStartOf="@+id/iv_icon"
                app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_18"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_up"
                app:layout_constraintStart_toEndOf="@id/iv_up"
                app:layout_constraintTop_toTopOf="@id/iv_up" />


            <ImageView
                android:contentDescription="@string/icon"
                android:id="@+id/iv_down"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_round_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="@+id/iv_up"
                app:layout_constraintStart_toStartOf="@+id/iv_up"
                app:layout_constraintTop_toBottomOf="@+id/iv_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_down"
                app:layout_constraintStart_toEndOf="@id/iv_down"
                app:layout_constraintTop_toTopOf="@id/iv_down" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp"

                    app:layoutManager="LinearLayoutManager" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>


